--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 22:05:02 2018</p>
+         Last Run: Thu Nov 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>42</td>
+                        <td>34</td>
+                        <td>77</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>N</td>
+                        <td>95</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Snow Showers</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>30</td>
+                        <td>74</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>N</td>
+                        <td>97</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Snow Showers</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>36</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>98</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>24</td>
-                        <td>74</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>N</td>
-                        <td>98</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>24</td>
-                        <td>75</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>N</td>
-                        <td>98</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "42",
-                 "24",
-                 "24"
+                 "34",
+                 "30",
+                 "36"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "77",
                  "74",
-                 "75"
+                 "76"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "98",
-                 "98"
+                 "95",
+                 "97",
+                 "96"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 22:05:02 2018</p>
+         Last Run: Thu Nov 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>-5</td>
                         <td>-10</td>
                         <td>52</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>14</td>
                         <td>N</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>46</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>N</td>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "78",
-                 "75"
+                 "77",
+                 "74"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 22:05:02 2018</p>
+         Last Run: Thu Nov 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>-9</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>63</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "81",
+                 "80",
                  "83"
                ]
              },
@@ -614,7 +614,7 @@
                "data":[
                  "71",
                  "66",
-                 "63"
+                 "62"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 22:05:02 2018</p>
+         Last Run: Thu Nov 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
+                 "68",
                  "70",
-                 "74"
+                 "73"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "54",
-                 "56"
+                 "55"
                ]
              }
            ]
