--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 23:05:02 2018</p>
+         Last Run: Fri Nov 30 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>34</td>
+                        <td>36</td>
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>95</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -50,19 +50,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>36</td>
+                        <td>39</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>N</td>
-                        <td>96</td>
+                        <td>NNE</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
+                 "36",
                  "30",
-                 "36"
+                 "39"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
                  "97",
-                 "96"
+                 "98",
+                 "98"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 23:05:02 2018</p>
+         Last Run: Fri Nov 30 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>58</td>
+                        <td>53</td>
                         <td>80</td>
                         <td>0</td>
                         <td>14</td>
@@ -258,9 +258,9 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-10</td>
-                        <td>52</td>
+                        <td>-4</td>
+                        <td>-9</td>
+                        <td>48</td>
                         <td>77</td>
                         <td>0</td>
                         <td>14</td>
@@ -272,7 +272,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>46</td>
+                        <td>42</td>
                         <td>74</td>
                         <td>0</td>
                         <td>14</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-10",
+                 "-9",
                  "-9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-4",
                  "-4"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "58",
-                 "52",
-                 "46"
+                 "53",
+                 "48",
+                 "42"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 23:05:02 2018</p>
+         Last Run: Fri Nov 30 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,7 +460,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
@@ -468,31 +468,31 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>71</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-9</td>
-                        <td>-14</td>
+                        <td>-13</td>
                         <td>7</td>
-                        <td>80</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>66</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>7</td>
-                        <td>83</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>62</td>
+                        <td>53</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>7</td>
+                        <td>82</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-14",
+                 "-13",
                  "-14"
                ]
              },
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "80",
-                 "83"
+                 "81",
+                 "82"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "66",
-                 "62"
+                 "55",
+                 "53",
+                 "51"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 23:05:02 2018</p>
+         Last Run: Fri Nov 30 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -691,23 +691,23 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>73</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>55</td>
+                        <td>NW</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,7 +807,7 @@
                "data":[
                  "4",
                  "4",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -817,7 +817,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "70",
+                 "71",
                  "73"
                ]
              },
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "54",
-                 "55"
+                 "53",
+                 "53"
                ]
              }
            ]
