--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 00:05:02 2018</p>
+         Last Run: Fri Nov 30 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>36</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -45,8 +45,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>30</td>
-                        <td>74</td>
+                        <td>31</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -57,10 +57,10 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>39</td>
-                        <td>76</td>
+                        <td>38</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNE</td>
                         <td>98</td>
                      </tr>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "36",
-                 "30",
-                 "39"
+                 "31",
+                 "38"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "74",
-                 "76"
+                 "76",
+                 "73",
+                 "75"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 00:05:02 2018</p>
+         Last Run: Fri Nov 30 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-10</td>
-                        <td>53</td>
-                        <td>80</td>
+                        <td>52</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -260,20 +260,20 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>48</td>
-                        <td>77</td>
+                        <td>46</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>N</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>42</td>
-                        <td>74</td>
+                        <td>39</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>14</td>
                         <td>N</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "48",
-                 "42"
+                 "52",
+                 "46",
+                 "39"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "77",
-                 "74"
+                 "78",
+                 "75",
+                 "71"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "96",
+                 "95",
                  "95"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 00:05:02 2018</p>
+         Last Run: Fri Nov 30 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,9 +464,9 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
                         <td>55</td>
                      </tr>
@@ -476,7 +476,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -488,7 +488,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "81",
-                 "82"
+                 "79",
+                 "79",
+                 "81"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 30 00:05:02 2018</p>
+         Last Run: Fri Nov 30 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-12</td>
+                        <td>-17</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>50</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>53</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-13</td>
-                        <td>-18</td>
-                        <td>5</td>
-                        <td>73</td>
+                        <td>-14</td>
+                        <td>-19</td>
+                        <td>4</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>53</td>
+                        <td>W</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
                  "-17",
-                 "-18"
+                 "-18",
+                 "-19"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
                  "-12",
-                 "-13"
+                 "-13",
+                 "-14"
                ]
              }
            ]
@@ -807,7 +807,7 @@
                "data":[
                  "4",
                  "4",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "71",
-                 "73"
+                 "72",
+                 "72",
+                 "74"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "53",
-                 "53"
+                 "49",
+                 "51",
+                 "51"
                ]
              }
            ]
